fixing accordion mobile font size

--- a/css/style.css
+++ b/css/style.css
@@ -138,9 +138,9 @@ h4 {
 
 @media only screen and (max-width: 700px) {
   .accordion__title {
-    font-size: 1.8rem;
-    letter-spacing: -0.8px;
-    line-height: 1.333; } }
+    font-size: 1.8rem !important;
+    letter-spacing: -0.8px !important;
+    line-height: 1.333 !important; } }
 
 .accordion__icon {
   transition: all 0.5s;
